--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,78 @@
             <!--<systemPath>${project.basedir}/lib/jSSC-0.9.0-Release/jssc.jar</systemPath>-->
         </dependency>
     </dependencies>
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <!-- <linkXref>true</linkXref>-->
+                    <sourceEncoding>utf-8</sourceEncoding>
+                    <minimumTokens>100</minimumTokens>
+                    <targetJdk>1.6</targetJdk>
+                    <excludes>
+                        <exclude>**/test/**</exclude>
+                    </excludes>
+                    <rulesets>
+                        <ruleset>rulesets/basic.xml</ruleset>
+                        <ruleset>rulesets/braces.xml</ruleset>
+                        <ruleset>rulesets/clone.xml</ruleset>
+                        <ruleset>rulesets/codesize.xml</ruleset>
+                        <ruleset>rulesets/coupling.xml</ruleset>
+                        <ruleset>rulesets/design.xml</ruleset>
+                        <ruleset>rulesets/finalizers.xml</ruleset>
+                        <ruleset>rulesets/imports.xml</ruleset>
+                        <ruleset>rulesets/j2ee.xml</ruleset>
+                        <ruleset>rulesets/javabeans.xml</ruleset>
+                        <ruleset>rulesets/junit.xml</ruleset>
+                        <ruleset>rulesets/logging-jakarta-commons.xml</ruleset>
+                        <ruleset>rulesets/logging-java.xml</ruleset>
+                        <ruleset>rulesets/migrating.xml</ruleset>
+                        <ruleset>rulesets/naming.xml</ruleset>
+                        <ruleset>rulesets/optimizations.xml</ruleset>
+                        <ruleset>rulesets/strictexception.xml</ruleset>
+                        <ruleset>rulesets/strings.xml</ruleset>
+                        <ruleset>rulesets/sunsecure.xml</ruleset>
+                        <ruleset>rulesets/unusedcode.xml</ruleset>
+                    </rulesets>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <configLocation>sun_checks.xml</configLocation>
+                    <suppressionsFile>suppresssions.xml</suppressionsFile>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <show>public</show>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <findbugsXmlOutput>true</findbugsXmlOutput>
+                    <!-- Optional directory to put findbugs xml report -->
+                    <findbugsXmlOutputDirectory>target/site</findbugsXmlOutputDirectory>
+                </configuration>
+            </plugin>
+
+        </plugins>
+
+    </reporting>
 
 
 </project>
