--- a/pom.xml
+++ b/pom.xml
@@ -44,10 +44,11 @@
                         <id>sign</id>
                         <configuration>
                             <alias>MyApplet</alias>
+                            <keypass>123456</keypass>
                             <storepass>123456</storepass>
                             <archive>./target/ardoSerial-0.1-jar-with-dependencies.jar</archive>
                         </configuration>
-                        <phase>install</phase>
+                        <phase>deploy</phase>
                         <goals>
                             <goal>sign</goal>
                         </goals>
