--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,12 @@
             <!--<scope>system</scope>-->
             <!--<systemPath>${project.basedir}/lib/jSSC-0.9.0-Release/jssc.jar</systemPath>-->
         </dependency>
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>resin-javaee16</artifactId>
+            <version>4.0.23</version>
+        </dependency>
+
     </dependencies>
     <reporting>
         <plugins>
