--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
                 <configuration>
                     <includes>
                         <include>
-                            target/classes/*
+                            target/classes/props/*
                         </include>
                     </includes>
                     <replacements>
