--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,22 @@
 
     <build>
         <plugins>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <archive>
+                        <index>true</index>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                        </manifest>
+                        <manifestEntries>
+                            <Trusted-Library>true</Trusted-Library>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
@@ -30,6 +45,11 @@
                     <execution>
                         <configuration>
                             <finalName>${project.name}-0.1</finalName>
+                            <archive>
+                                <manifestEntries>
+                                    <Trusted-Library>true</Trusted-Library>
+                                </manifestEntries>
+                            </archive>
                         </configuration>
                         <id>make-assembly</id>
                         <!-- this is used for inheritance merges -->
