--- a/pom.xml
+++ b/pom.xml
@@ -120,8 +120,8 @@
             <groupId>jssc</groupId>
             <artifactId>jssc</artifactId>
             <version>0.9.0-Release</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/jSSC-0.9.0-Release/jssc.jar</systemPath>
+            <!--<scope>system</scope>
+            <systemPath>${project.basedir}/lib/jSSC-0.9.0-Release/jssc.jar</systemPath>-->
         </dependency>
     </dependencies>
     <reporting>
