--- a/pom.xml
+++ b/pom.xml
@@ -105,8 +105,9 @@
                     </replacements>
                 </configuration>
             </plugin>
-
         </plugins>
+
+
     </build>
 
 
@@ -123,11 +124,11 @@
             <!--<scope>system</scope>
             <systemPath>${project.basedir}/lib/jSSC-0.9.0-Release/jssc.jar</systemPath>-->
         </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>r05</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.google.guava</groupId>-->
+            <!--<artifactId>guava</artifactId>-->
+            <!--<version>r05</version>-->
+        <!--</dependency>-->
 
     </dependencies>
     <reporting>
