--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,30 @@
 
     <name>ardoSerial</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>jssc</groupId>
+            <artifactId>jssc</artifactId>
+            <version>0.9.0-Release</version>
+
+            <!--<scope>system</scope>
+            <systemPath>${project.basedir}/lib/jSSC-0.9.0-Release/jssc.jar</systemPath>-->
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.8.2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!--<dependency>-->
+        <!--<groupId>com.google.guava</groupId>-->
+        <!--<artifactId>guava</artifactId>-->
+        <!--<version>r05</version>-->
+        <!--</dependency>-->
+
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -105,34 +129,13 @@
                     </replacements>
                 </configuration>
             </plugin>
+
+
         </plugins>
 
 
     </build>
 
-
-    <dependencies>
-        <dependency>
-            <groupId>jssc</groupId>
-            <artifactId>jssc</artifactId>
-            <version>0.9.0-Release</version>
-            <!--<scope>system</scope>
-            <systemPath>${project.basedir}/lib/jSSC-0.9.0-Release/jssc.jar</systemPath>-->
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <scope>test</scope>
-        </dependency>
-
-        <!--<dependency>-->
-        <!--<groupId>com.google.guava</groupId>-->
-        <!--<artifactId>guava</artifactId>-->
-        <!--<version>r05</version>-->
-        <!--</dependency>-->
-
-    </dependencies>
     <reporting>
         <plugins>
             <plugin>
@@ -168,7 +171,7 @@
                         <ruleset>rulesets/javabeans.xml</ruleset>
                         <ruleset>rulesets/junit.xml</ruleset>
                         <ruleset>rulesets/logging-jakarta-commons.xml</ruleset>
-                        <ruleset>rulesets/logging-java.xml</ruleset>
+                        <!--<ruleset>rulesets/logging-java.xml</ruleset>-->
                         <ruleset>rulesets/migrating.xml</ruleset>
                         <ruleset>rulesets/naming.xml</ruleset>
                         <ruleset>rulesets/optimizations.xml</ruleset>
