--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,12 @@
             <version>2.1.7</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.5</version>
+        </dependency>
+
 
     </dependencies>
 
